--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "autoprefixer": "^5.1.1",
     "browserify": "^10.2.1",
     "gulp": "^3.8.11",
+    "gulp-cssnext": "^1.0.0",
     "gulp-livereload": "^3.8.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-util": "^3.0.4",
     "hbsify": "^1.0.1",
