--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "gulp-util": "^3.0.4",
     "hbsify": "^1.0.1",
     "lodash.assign": "^3.1.0",
+    "stringify": "^3.1.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.1.2"
   },
   "dependencies": {
     "gsap": "^1.16.1",
+    "mustache": "^2.0.0",
     "nanoscroller": "^0.8.7",
     "swiper": "^3.0.7"
   }
