home view : Js structure, install swiper

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-util": "^3.0.4",
     "hbsify": "^1.0.1",
     "lodash.assign": "^3.1.0",
+    "postcss-import": "^5.2.2",
     "stringify": "^3.1.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
