--- a/.htaccess
+++ b/.htaccess
@@ -13,13 +13,13 @@
 # ----------------------------------------------------------------------
 
 <IfModule mod_rewrite.c>
-  # Rewrite assets/* from any subfolder to root, except admin
-  RewriteCond %{REQUEST_URI} !^cockpit
+  RewriteRule ^cockpit - [L,NC]
+  
+  # Rewrite assets/* from any subfolder to root
   RewriteRule assets/(.*)$ assets/$1 [QSA,L]
 
-  # Redirect all but files to index, except admin
+  # Redirect all but files to index
   RewriteCond %{REQUEST_FILENAME} !-f
-  RewriteCond %{REQUEST_URI} !^cockpit
   RewriteRule .* index.php [QSA,L]
 </IfModule>
 
