--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "gsap": "^1.16.1",
+    "jquery": "^2.1.4",
     "mustache": "^2.0.0",
     "nanoscroller": "^0.8.7",
     "swiper": "^3.0.7"
