upddate preprod, on a friday evening. YOLO.

--- a/.htaccess
+++ b/.htaccess
@@ -20,7 +20,7 @@
 
   # Redirect all but files to index
   RewriteCond %{REQUEST_FILENAME} !-f
-  RewriteRule .* index.php [QSA,L]
+  RewriteRule ^(.*)$ index.php?/$1 [QSA,L]
 </IfModule>
 
 # ----------------------------------------------------------------------
