list : npm install perfect-scrollbar + custom styles ✨

--- a/package.json
+++ b/package.json
@@ -32,6 +32,11 @@
     "jquery": "^2.1.4",
     "mustache": "^2.0.0",
     "nanoscroller": "^0.8.7",
+    "perfect-scrollbar": "^0.6.4",
     "swiper": "^3.0.7"
+  },
+  "scripts": {
+    "dev": "gulp",
+    "prod": "gulp --type production"
   }
 }
