--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "gsap": "^1.16.1",
     "jquery": "^2.1.4",
+    "lodash": "^3.10.1",
     "mustache": "^2.0.0",
     "nanoscroller": "^0.8.7",
     "perfect-scrollbar": "^0.6.4",
