--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "watchify": "^3.1.2"
   },
   "dependencies": {
+    "dom-classlist": "^1.0.1",
     "gsap": "^1.16.1",
     "jquery": "^2.1.4",
     "lodash": "^3.10.1",
