--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lodash": "^3.10.1",
     "mustache": "^2.0.0",
     "nanoscroller": "^0.8.7",
+    "normalize.css": "^3.0.3",
     "perfect-scrollbar": "^0.6.4",
     "swiper": "^3.1.2"
   },
