--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "nanoscroller": "^0.8.7",
     "normalize.css": "^3.0.3",
     "perfect-scrollbar": "^0.6.4",
+    "photoswipe": "^4.1.0",
     "swiper": "^3.1.2"
   },
   "scripts": {
