--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "swiper": "^3.1.2"
   },
   "scripts": {
-    "dev": "gulp",
+    "start": "gulp",
     "prod": "gulp --type production"
   }
 }
